SERVER-26248 Make IndexDescriptor string constants constexpr